# NhlDiscordBot

./: Cargo.toml  LICENSE
src/: error.rs  main.rs
src/data_model/: mod.rs  nhl_box_score.rs  nhl_content.rs  nhl_game_data.rs  nhl_game_status.rs  nhl_highlight_items.rs  nhl_highlight_media.rs  nhl_highlight_playback.rs  nhl_highlights.rs  nhl_line_score.rs  nhl_live.rs  nhl_live_data.rs  nhl_match_team.rs  nhl_match_team_skater_stats.rs  nhl_match_team_stats.rs  nhl_match_teams.rs  nhl_schedule.rs  nhl_schedule_date.rs  nhl_schedule_game.rs  nhl_schedule_game_team.rs  nhl_schedule_game_teams.rs  nhl_schedule_game_venue.rs  nhl_team.rs
src/discord/: client.rs  commands.rs  config.rs  event_handler.rs  helpers.rs  influx.rs  interactions.rs  mod.rs
src/discord/commands/: common.rs  mod.rs  schedule.rs  score.rs  summary.rs
src/nhl/: autocomplete.rs  commands.rs  fetch_data.rs  mod.rs  utils.rs
src/nhl/model/: common.rs  game.rs  meta.rs  mod.rs  schedule.rs
