[package]
name = "nhl_discord_bot"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
cached = { version = "0.52.0", features = ["async"] }
chrono = "0.4.23"
chrono-tz = "0.9.0"
config-file = "0.2.3"
futures = "0.3.26"
lazy_static = "1.4.0"
reqwest = "0.12.5"
serde = "1.0.154"
serde_json = "1.0.94"
serenity = "0.12.2"
thiserror = "1.0.61"
tokio = { version = "1.26.0", features = ["macros", "signal", "rt-multi-thread"] }